--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
