--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "next": "14.2.4",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
