--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
