--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2"
