--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.4.0",
+    "react-share": "^5.1.2",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2"
   },
